@@ -65,6 +65,7 @@ C Anthony Risinger <anthony@extof.me>
 Serge Tarkovski <serge.tarkovski@gmail.com>
 Edwin Cox
 Henning Schroeder <henning.schroeder@gmail.com>
+Stolati <mickael.kerbrat@gmail.com>
 
 
 Erik gets a special mention for the contribution of the "Showcase".
