@@ -65,6 +65,7 @@ Copyright: 2010 C Anthony Risinger <anthony@extof.me>
 Copyright: 2010 Serge Tarkovski <serge.tarkovski@gmail.com>
 Copyright: 2010 Edwin Cox
 Copyright: 2010 Henning Schroeder <henning.schroeder@gmail.com>
+Copyright: 2010 Stolati <mickael.kerbrat@gmail.com>
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
